--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,7 +85,7 @@ dependencies:
   defer_pointer: ^0.0.2
 
   permission_handler: ^11.3.1
-  saver_gallery: ^4.0.0
+  saver_gallery: 3.0.5
 
   animations: ^2.0.7
 
