--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,8 @@ app.*.map.json
 .flatpak-builder
 build-dir
 Saber-Linux-Portable.tar.gz
+
+# Generated
+**/generated_*
+**/Generated*
+pubspec.lock
