--- a/.github/workflows/edgiest-android.yml
+++ b/.github/workflows/edgiest-android.yml
@@ -94,5 +94,7 @@ jobs:
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
+          release_name: ${{ github.ref_name }}
+          body: ${{ github.event.head_commit.message }}
           file: output/${{ steps.rename_apk.outputs.apkName }}
           overwrite: true
