--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,9 +5,7 @@ on:
   workflow_dispatch:
   push:
     tags:
-      - '**'
-    branches:
-      - '**'
+      - 'v*.*.*-edgiest'
     paths:
       - .github/workflows/android.yml
 
@@ -17,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        foss: [false, true]
+        foss: [true]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -105,4 +103,7 @@ jobs:
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
+          release_name: ${{ github.ref_name }}
+          body: ${{ github.event.head_commit.message }}
           file: output/${{ steps.rename_apk.outputs.apkName }}
+          overwrite: true
